Bug 141021 - Extrusion North has wrong Origin
Summary: Extrusion North has wrong Origin
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Regina Henschel
URL:
Whiteboard: target:7.2.0 target:7.1.3
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-14 14:21 UTC by Regina Henschel
Modified: 2021-03-23 00:22 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
document with extruded shape (12.92 KB, application/vnd.oasis.opendocument.presentation)
2021-03-14 14:21 UTC, Regina Henschel
Details
Fontwork shape (16.88 KB, application/vnd.oasis.opendocument.presentation)
2021-03-14 14:47 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2021-03-14 14:21:03 UTC
Created attachment 170476 [details]
document with extruded shape

Open attached document. It has a shape, which is extruded. You do not see the side planes because you look in front of it.
Select the shape. The "3D-Settings" dialog should open. Look a little bit around, it is likely docked somewhere. If it is really not there, you can open it via View > Toolbars.
Open the Direction floater. Click on direction "Extrusion South". Now you can see the shape as if you were a little bit above it.
Now click on direction "Extrusion North".

Expected: You can see the shape as if you were a little bit below it. It should look the same as "Extrusion South" but vertically mirrored.

Observed: Depending on your version, you see no side plane at all or a side plane, which is too short.
Comment 1 Regina Henschel 2021-03-14 14:29:08 UTC
The error is a wrong Origin in "case 90" in impl_execute in https://opengrok.libreoffice.org/xref/core/svx/source/toolbars/extrusionbar.cxx
Should be "fOriginY = 0.50;" but is "fOriginY = -0.50;"

Shapes, which were created with older versions, keep their values until the direction is newly assigned.

I don't make it an easy hack, because I need the correct value in my work on export extrusion to pptx.
Comment 2 Regina Henschel 2021-03-14 14:47:10 UTC
Created attachment 170477 [details]
Fontwork shape

The same error can be seen on Fontwork shapes.
Comment 3 Commit Notification 2021-03-16 23:08:01 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fa8d00560bbfededec7f2c328f04eb2b369c00e2

tdf#141021 Correct sign in Origin in Extrusion North

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2021-03-17 20:10:10 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/8eb4bf3b4d94413cb6f10fecc878829f5d1995ec

tdf#141021 Correct sign in Origin in Extrusion North

It will be available in 7.1.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.